refactor: sonnar code adjustments